--- a/SpeedMeasuremetRazor/Pages/Locations/EditLocation.cshtml
+++ b/SpeedMeasuremetRazor/Pages/Locations/EditLocation.cshtml
@@ -1,4 +1,26 @@
 ﻿@page
 @model SpeedMeasuremetRazor.Pages.Locations.EditLocationModel
 @{
+    ViewData["Title"] = "Edit location";
 }
+
+<h1>Edit location</h1>
+
+<form method="post">
+    <input type="hidden" asp-for="Location.Id"/>
+    <div class="form-group">
+        <label asp-for="Location.Address" class="control-label"></label>
+        <input asp-for="Location.Address" class="form-control"/>
+    </div>
+    <div class="form-group">
+        <label asp-for="Location.Zone" class="control-label"></label>
+        <input asp-for="Location.Zone" class="form-control"/>
+    </div>
+    <div class="form-group">
+        <label asp-for="Location.SpeedLimit" class="control-label"></label>
+        <input asp-for="Location.SpeedLimit" class="form-control"/>
+    </div>
+    <div class="form-group">
+        <input type="submit" value="Save changes" class="btn button"/>
+    </div>
+</form>
