--- a/SpeedMeasuremetRazor/Pages/Locations/EditLocation.cshtml
+++ b/SpeedMeasuremetRazor/Pages/Locations/EditLocation.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using SpeedMeasuremetRazor.Models
 @model SpeedMeasuremetRazor.Pages.Locations.EditLocationModel
 @{
     ViewData["Title"] = "Edit location";
@@ -13,8 +14,10 @@
         <input asp-for="Location.Address" class="form-control"/>
     </div>
     <div class="form-group">
-        <label asp-for="Location.Zone" class="control-label"></label>
-        <input asp-for="Location.Zone" class="form-control"/>
+        <label asp-for="@Model.Location.Zone" class="control-label"></label>
+        <select asp-for="Location.Zone" asp-items="Html.GetEnumSelectList<Zone>()" class="form-control">
+            <option value="">Choose a zone</option>
+        </select>
     </div>
     <div class="form-group">
         <label asp-for="Location.SpeedLimit" class="control-label"></label>
