--- a/SpeedMeasuremetRazor/Pages/Shared/_Layout.cshtml
+++ b/SpeedMeasuremetRazor/Pages/Shared/_Layout.cshtml
@@ -25,9 +25,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Locations/Index">Index</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Locations/Index">Locations</a>
                         </li>
-                       
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Measurements/Index">Measurements</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
