--- a/SpeedMeasuremetRazor/Pages/Measurements/CreateSpeedMeasurement.cshtml
+++ b/SpeedMeasuremetRazor/Pages/Measurements/CreateSpeedMeasurement.cshtml
@@ -7,11 +7,12 @@
 <h1>Create Speed measurement</h1>
 <img src="~/Images/viewfinder.JPG"/>
 <p>Choose a location</p>
-<div class="form-group">
-    <label asp-for="@Model.SpeedMeasurement.Location" class="control-label"></label>
-    <select asp-for="LocationId" asp-items="Model.Options" class="form-control">
-    </select>
-</div>
 <form method="post">
+    <div class="form-group">
+        <label asp-for="@Model.LocationId" class="control-label"></label>
+        <select asp-for="@Model.LocationId" asp-items="@Model.Options" class="form-control">
+        </select>
+    </div>
+
     <button>Create</button>
 </form>
