Started on exceptions

--- a/SpeedMeasuremetRazor/Pages/Locations/Index.cshtml
+++ b/SpeedMeasuremetRazor/Pages/Locations/Index.cshtml
@@ -46,6 +46,9 @@
                 <a asp-page="/Locations/EditLocation" asp-route-Id="@location.Id">
                     Edit
                 </a>
+                <form method="post">
+                    <button asp-route-Id="@location.Id">Delete</button>
+                </form>
             </td>
         </tr>
 
