--- a/SpeedMeasuremetRazor/Pages/Measurements/CreateSpeedMeasurement.cshtml
+++ b/SpeedMeasuremetRazor/Pages/Measurements/CreateSpeedMeasurement.cshtml
@@ -16,3 +16,5 @@
 
     <button>Create</button>
 </form>
+<img src="~/Images/camera-button.jpg"/>
+<p>Look in the viewfinder and push the button</p>
