--- a/SpeedMeasuremetRazor/wwwroot/css/site.css
+++ b/SpeedMeasuremetRazor/wwwroot/css/site.css
@@ -69,3 +69,12 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.Image3x5 {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+}
+.RedError {
+    background-color: red;
+}
+
