Stylized layout. Very clean

--- a/SpeedMeasuremetRazor/Pages/Index.cshtml
+++ b/SpeedMeasuremetRazor/Pages/Index.cshtml
@@ -5,4 +5,4 @@
     ViewData["Title"] = "SpeedMeasurementSystem";
 }
 
-Her må der gerne være et billede
+<img class="center" src="/Images/policecar.jpg" style="max-height: 500px"/>
