--- a/SpeedMeasuremetRazor/Pages/Measurements/CreateSpeedMeasurement.cshtml
+++ b/SpeedMeasuremetRazor/Pages/Measurements/CreateSpeedMeasurement.cshtml
@@ -10,7 +10,7 @@
 @{
     if (Model.InvalidPost != null && Model.InvalidPost.Length > 0)
     {
-        <p>@Model.InvalidPost</p>
+        <p class="RedError">@Model.InvalidPost</p>
     }
 }
 <form method="post">
