--- a/SpeedMeasuremetRazor/Pages/Shared/_Layout.cshtml
+++ b/SpeedMeasuremetRazor/Pages/Shared/_Layout.cshtml
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-palevioletred border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">SpeedMeasuremetRazor</a>
+                <a class="navbar-cornsilk" asp-area="" asp-page="/Index" style="color: cornsilk">Speed Measurement Registry</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -19,13 +19,13 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="navlink-cornsilk" asp-area="" asp-page="/Index" style="color: cornsilk">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Locations/Index">Locations</a>
+                            <a class="navlink-cornsilk" asp-area="" asp-page="/Locations/Index" style="color: cornsilk">Locations</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Measurements/Index">Measurements</a>
+                            <a class="navlink-cornsilk" asp-area="" asp-page="/Measurements/Index" style="color: cornsilk">Measurements</a>
                         </li>
 
                     </ul>
@@ -39,9 +39,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer">
         <div class="container">
-            &copy; 2021 - SpeedMeasuremetRazor - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2021 - SpeedMeasuremetRazor - <a asp-area="" asp-page="/Privacy" style="color: cornsilk">Privacy</a>
         </div>
     </footer>
 
