--- a/SpeedMeasuremetRazor/wwwroot/css/site.css
+++ b/SpeedMeasuremetRazor/wwwroot/css/site.css
@@ -36,10 +36,10 @@ html {
 }
 
 .border-top {
-  border-top: 1px solid #e5e5e5;
+
 }
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+
 }
 
 .box-shadow {
@@ -61,13 +61,36 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  background-color: cornflowerblue;
 }
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px; /* Vertically center the text there */
+    background-color: palevioletred;
+    color: cornsilk;
+}
+
+.bg-palevioletred {
+    background-color: palevioletred;
+}
+
+.navlink-cornsilk {
+    color: cornsilk;
+    display: block;
+    padding: 0.5rem 1rem;
+}
+.navbar-cornsilk {
+    display: inline-block;
+    padding-top: 0.3125rem;
+    padding-bottom: 0.3125rem;
+    margin-right: 1rem;
+    font-size: 1.25rem;
+    line-height: inherit;
+    white-space: nowrap;
+    color: cornsilk;
 }
 
 .Image3x5 {
@@ -76,5 +99,16 @@ body {
 }
 .RedError {
     background-color: red;
+}
+
+.GreenOK {
+    background-color: green;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
