style på CreateSpeedMeasurement

--- a/SpeedMeasuremetRazor/Pages/Locations/Index.cshtml
+++ b/SpeedMeasuremetRazor/Pages/Locations/Index.cshtml
@@ -6,7 +6,7 @@
 <h1>List of Locations</h1>
 
 <p>Number of Locations: @Model.LocationRepo.GetAllLocations().Count</p>
-<a asp-page="/Locations/CreateLocation">
+<a style="color: white" asp-page="/Locations/CreateLocation">
     Create New
 </a>
 <table class="table">
