--- a/SpeedMeasuremetRazor/Pages/Measurements/Index.cshtml
+++ b/SpeedMeasuremetRazor/Pages/Measurements/Index.cshtml
@@ -6,7 +6,7 @@
 <h1>List of speed measurements</h1>
 
 <p>Number of measurements: @Model.SpeedMeasurementRepo.GetAllSpeedMeasurements().Count</p>
-<a asp-page="/Measurements/CreateSpeedMeasurement">
+<a style="color: white" asp-page="/Measurements/CreateSpeedMeasurement">
     Create New
 </a>
 <table class="table">
