--- a/SpeedMeasuremetRazor/Pages/Index.cshtml
+++ b/SpeedMeasuremetRazor/Pages/Index.cshtml
@@ -5,4 +5,8 @@
     ViewData["Title"] = "SpeedMeasurementSystem";
 }
 
-<img class="center" src="/Images/policecar.jpg" style="max-height: 500px"/>
+<img class="center RoundedImage" src="/Images/policecar.jpg" style="max-height: 500px"/>
+<div class="center2" style="padding-top:30px">
+    <h2>Welcome</h2>
+    <p>Some infomative text</p>
+</div>
