--- a/SpeedMeasuremetRazor/wwwroot/css/site.css
+++ b/SpeedMeasuremetRazor/wwwroot/css/site.css
@@ -125,6 +125,9 @@ body {
   
  
 }
+.floatLeft {
+    float: left;
+}
     /*.Edit-button.a:visited*/
 
 .Styled-button-red, .Styled-button-red:hover {
